# homeAutomation

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  main.c
archive/: main.c
archive/control/: CMakeLists.txt  main.cpp
archive/control/include/: ocrnet.hpp
archive/device/ml/src/: classificationMachine.c
archive/device/python/: ha_python.h
archive/device/python/src/: slackInterface.c
archive/device/utilities/: CMakeLists.txt
archive/device/utilities/include/: hashTable.h  matrix.h
archive/device/utilities/src/: commandsParsing.c
archive/device/wordToVec/: wordToVec.h
archive/device/wordToVec/include/: ngrams.h
archive/device/wordToVec/src/: ngrams.c
communication/: CMakeLists.txt  main.cpp
communication/include/: communicate.hpp  log.hpp
communication/src/: communicate.cpp  log.cpp
control/: CMakeLists.txt  main.cpp
control/include/: communicate.hpp  dataset.hpp  ocrnet.hpp  py_module.hpp  resnet.hpp  train.hpp
control/src/: communicate.cpp  dataset.cpp  ocrnet.cpp  resnet.cpp  train.cpp
device/python/: CMakeLists.txt  ha_python.h
device/utilities/: utilities.h
device/utilities/include/: vector.h
device/wordToVec/include/: word_to_vec.h
docs/: Doxyfile
docs/html/: ____init_____8py.html  annotated.html  classes.html  classification_machine_8c.html  classification_machine_8h.html  classification_machine_8h_source.html  classscripts_1_1slack_1_1_slack_server.html  commands_parsing_8c.html  commands_parsing_8h.html  commands_parsing_8h_source.html  dir_53e6fa9553ac22a5646d2a2b2d7b97a1.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_func.html  hash_table_8c.html  hash_table_8h.html  hash_table_8h_source.html  hierarchy.html  index.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_vars.html  namespaces.html  namespacescripts.html  namespacescripts_1_1plotting.html  namespacescripts_1_1slack.html  namespaceslack.html  plotting_8c.html  plotting_8h.html  plotting_8h_source.html  plotting_8py.html  slack_8py.html  slack_interface_8c.html  slack_interface_8h.html  slack_interface_8h_source.html  (+9 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_1.js  classes_2.js  classes_4.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  functions_c.js  namespaces_0.js  searchdata.js  (+13 more)
hardware/: CMakeLists.txt  main.cpp
hardware/devices/: devices.hpp
hardware/devices/include/: compute_device.hpp  device.hpp  raspi.hpp
hardware/devices/src/: compute_device.cpp  device.cpp  raspi.cpp
hardware/utilities/: utilities.hpp
hardware/utilities/include/: data_log.hpp
hardware/utilities/src/: data_log.cpp
include/: classificationMachine.h  hashTable.h  plotting.h  slackInterface.h  vectorOps.h
messaging/: CMakeLists.txt  main.cpp
messaging/include/: broker.hpp  dlib_zmq.hpp  log.hpp  message.hpp  server.hpp
messaging/src/: broker.cpp  server.cpp
ml/: CMakeLists.txt  ml.h
ml/include/: classificationMachine.h
python/: ha_python.h
python/include/: plotting.h
python/internal/: logging.h
python/scripts/: plotting.py  slack.py
python/src/: plotting.c
rnn/include/: cudnn_rnn.hpp
scripts/: __init__.py  plotting.py  slack.py
src/: classificationMachine.c  commandsParsing.c  plotting.c  slackInterface.c  vectorOps.c
utilities/: py_module.h  utilities.h
utilities/include/: commandsParsing.h  hashTable.h  vector.h
utilities/src/: hashTable.c  matrix.c  vector.c
wordToVec/: CMakeLists.txt  wordToVec.h
wordToVec/include/: bigrams.h  ngrams.h  word_to_vec.h
wordToVec/src/: bigrams.c  ngrams.c  word_to_vec.c
